Fixed following bugs: On click of hamburger, the sidebar is now minimized and not closed Added a title for BMC Monitor Made Roles Mandatory while Updating a Node Actual Values are now shown on hovering empty fields in Node Config and Node Summary Pages Fixed empty roles being saved bug Fixed the alignment of text in Type table due to the css changes made in checkbox css

--- a/temp-ui/src/views/views.css
+++ b/temp-ui/src/views/views.css
@@ -55,11 +55,6 @@
 	z-index: 0 !important;
 }
 
-.cell {
-	border-right-style: none !important;
-	cursor: pointer;
-}
-
 .list-group-item {
 	background-color: transparent !important;
 	border: none !important;
@@ -89,9 +84,6 @@
 	
 }
 
-.public_fixedDataTableCell_cellContent {
-    padding: 15px 8px !important;
-}
 
 .custFillBtn{
 	color: white  !important;
@@ -102,6 +94,11 @@
 	background-color: #4f908e !important;
 	
 }
+
+.form-check-input {
+	margin-top: 0.7rem !important;
+}
+
 
 #register,#forgotpassword,#logInBtn{
 	display: none;
